# ha-tcl-matter

./: .devcontainer.json  .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  MAINLINE_PR_PLAN.md  PROJECT_STATUS.md  README.md  hacs.json  pyproject.toml  requirements.test.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: test.yml
config/: configuration.yaml
custom_components/tcl_matter/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  humidifier.py  manifest.json  matter_ws.py  select.py  sensor.py  strings.json
custom_components/tcl_matter/translations/: en.json
scripts/: develop
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_humidifier.py  test_init.py  test_matter_ws.py  test_select.py  test_sensor.py
